--- a/_data/data.yml
+++ b/_data/data.yml
@@ -72,9 +72,9 @@ experiences:
       time: October 2019 – Present
       company: Folklore / Urbania
       details: |
-        Front-end continuous imporovement on main site
-        Integrated various Front-end code from Adobe models
-        Built a recommendation API using tensorflow and Google Analytics
+        Built an interactive video platform that delivered a unique UX based on multiple user inputs.
+        Contributed to continuous imporovement on main site and integrated front-end code from Adobe models.
+        Researched an AI empowered recommendation API using Tensorflow and Google Analytics.
         Javascript ES6 / NodeJS / Git / Asana / Php / React / Tensorflow
 
     - role: Analysis Intern
