--- a/_data/data.yml
+++ b/_data/data.yml
@@ -73,7 +73,8 @@ experiences:
       company: Folklore / Urbania
       details: |
         Built an interactive video platform that delivered a unique UX based on multiple user inputs.
-        Contributed to continuous imporovement on main site and integrated front-end code from Adobe models.
+        Contributed to continuous improvement on main site and integrated front-end code from Adobe models.
+        Collaborated with a UX designer to improve the internal CMS.
         Researched an AI empowered recommendation API using Tensorflow and Google Analytics.
         Javascript ES6 / NodeJS / Git / Asana / Php / React / Tensorflow
 
