--- a/_data/data.yml
+++ b/_data/data.yml
@@ -71,7 +71,7 @@ experiences:
     - role: Fullstack Developer
       time: October 2019 – Present
       company: Folklore / Urbania
-      details: |
+      details: |+
         Built an interactive video platform that delivered a unique UX based on multiple user inputs.
         Contributed to continuous improvement on main site and integrated front-end code from Adobe models.
         Collaborated with a UX designer to improve the internal CMS.
